# sos-course-work

./: README.md
.github/workflows/: backend-tests.yml  deploy.yml
backend/avito_shop/: .coverage  .gitignore  coverage.xml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.ps1  start.py
backend/avito_shop/api/: __init__.py  dependencies.py
backend/avito_shop/api/endpoints/: __init__.py  auth.py  employees.py  transactions.py  user_info.py
backend/avito_shop/api/services/: employee_service.py  merch_item_service.py  transaction_service.py
backend/avito_shop/core/: config.py  jwt.py
backend/avito_shop/database/: initialize.py
backend/avito_shop/database/tables/entities/: __init__.py  employee.py  merch_item.py
backend/avito_shop/database/tables/junctions/: __init__.py  purchase.py  transaction.py  transfer.py
backend/avito_shop/schemas/: __init__.py  employee.py  purchase.py  transfer.py
backend/avito_shop/schemas/requests/: __init__.py  send_coins.py  sign_up.py
backend/avito_shop/schemas/responses/: __init__.py  inventory.py  wallet.py
backend/avito_shop/tests/: conftest.py  test_auth.py  test_transactions.py
backend/avito_shop/tests/override/: initialize.py
